behavior system and game cursor

--- a/src/Homeland/Assets/Assets.qrc
+++ b/src/Homeland/Assets/Assets.qrc
@@ -1,3 +1,6 @@
 <RCC>
-
+    <qresource prefix="/Assets">
+        <file alias="cursor64">./cursor64.png</file>
+        <file alias="cursor48">./cursor48.png</file>
+    </qresource>
 </RCC>
