--- a/src/Engine/Resources/Resources.qrc
+++ b/src/Engine/Resources/Resources.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/Shaders">
         <file alias="StandardVert">./Shaders/Standard.vert</file>
-        <file alias="StandardFrag">./Shaders/Standard.frag</file>
+        <file alias="StandardFrag">./Shaders/PhongLighting.frag</file>
         <file alias="PhysicsDebugDrawVert">./Shaders/PhysicsDebugDraw.vert</file>
         <file alias="PhysicsDebugDrawFrag">./Shaders/PhysicsDebugDraw.frag</file>
         <file alias="BasicVert">./Shaders/Basic.vert</file>
